--- a/landing page/assignments:projects/portfolio/main.css
+++ b/landing page/assignments:projects/portfolio/main.css
@@ -2,12 +2,41 @@ body {
   background: black;
 }
 
-p {
-  color: white;
+img{
+  width: 100%;
+  position: relative;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
-
-h1 {
-  color: white;
+.homepage {
   position: absolute;
-  text-align: center;
+}
+/* labels on homepage */
+      .twod {
+        position: absolute;
+      }
+      .threed {
+        position: absolute;
+      }
+      .animation {
+        position: absolute;
+      }
+      .graphicdesign {
+        position: absolute;
+      }
+      .otherwork {
+        position: absolute;
+      }
+      .about {
+        position: absolute;
+      }
+
+.twodlink{
+  position: absolute;
+  top: 130px;
+  left: 200px;
+  height: 60px;
+  width: 140px;
 }
