--- a/landing page/assignments:projects/portfolio/main.css
+++ b/landing page/assignments:projects/portfolio/main.css
@@ -33,10 +33,53 @@ img{
         position: absolute;
       }
 
+/* labels linking to other pages */
+
 .twodlink{
   position: absolute;
   top: 130px;
   left: 200px;
+  height: 60px;
+  width: 140px;
+}
+
+.threedlink{
+  position: absolute;
+  top: 230px;
+  left: 1170px;
+  height: 60px;
+  width: 140px;
+  z-index: 999
+}
+
+.animationlink{
+  position: absolute;
+  top: 450px;
+  left: 90px;
+  height: 60px;
+  width: 160px;
+}
+
+.graphicdesignlink{
+  position: absolute;
+  top: 470px;
+  left: 1160px;
+  height: 60px;
+  width: 240px;
+}
+
+.otherworklink{
+  position: absolute;
+  top: 680px;
+  left: 290px;
+  height: 60px;
+  width: 190px;
+}
+
+.aboutlink{
+  position: absolute;
+  top: 660px;
+  left: 1010px;
   height: 60px;
   width: 140px;
 }
