--- a/landing page/assignments:projects/portfolio/main.css
+++ b/landing page/assignments:projects/portfolio/main.css
@@ -2,9 +2,12 @@ body {
   background: black;
   font-family: 'Avenir';
 }
+
 p {
   text-align: center;
+  color: white;
 }
+
 img{
   width: 100%;
   position: relative;
@@ -15,6 +18,16 @@ img{
 }
 .homepage {
   position: absolute;
+}
+
+.black {
+  background-color: black;
+  width: 92%;
+  height: 100%;
+  position: absolute;
+  margin-top: 0;
+  padding-top: 0;
+  margin-left: 4.2%;
 }
 /* labels on homepage */
       .twod {
@@ -124,7 +137,6 @@ img{
   margin-top: 100px
 }
 
-.caption {
-  color: white;
-  font: Avenir;
+.captiontwod p {
+  color: rgb(8,255,97);
 }
